# xdoc-iu

./: .gitignore  Dockerfile  README.md  diabetes.json  docker-compose.yml  main.ipynb  main.py  pyproject.toml
.github/prompts/: erd.prompt.md  overall.prompt.md
app/: app.py  main.py  pyproject.toml  routers.py
app/auth/: models.py  routes.py  services.py
app/config/: settings.py
app/db/: mongo.py
app/diag/: models.py  routes.py  schemas.py
app/doctor/: models.py
app/hospital/: context.py  models.py  services.py
app/ml/: __init__.py  gemini.py  model.py  preprocess.py
app/patient/: models.py  routes.py  services.py
backend/: .dockerignore  .gitignore  README.md
backend/app/: pyproject.toml
backend/app/auth/: routes.py  services.py
backend/app/config/: settings.py
backend/app/db/: mongo.py
backend/app/diag/: routes.py
backend/app/doctor/: __init__.py  models.py  routes.py  services.py
backend/app/hospital/: middleware.py
backend/app/ml/: __init__.py  explain.py  model.py
backend/app/patient/: routes.py  services.py
backend/app/pretrained/: diabetes.scaler.pkl  heart_model.pkl
backend/app/utils/: __init__.py  encryption.py
backend/training/: diabetes.ipynb
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/diagnosis/predict/cardiovascular/: route.ts
frontend/src/app/api/diagnosis/predict/diabetes/: route.ts
frontend/src/app/diagnosis/cardiovascular/: page.tsx
frontend/src/app/diagnosis/diabetes/: page.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
training/: heart.ipynb  heart_disease_model.pkl  imputed_heart_disease.csv
