[project]
name = "xdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.7.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "shap==0.47.1",
    "streamlit>=1.44.0",
    "xgboost>=3.0.0",
]
