[project]
name = "xdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "faker>=37.1.0",
    "fastapi>=0.115.12",
    "google-genai>=1.7.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "motor>=3.7.0",
    "notebook>=7.3.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.2",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "shap==0.47.1",
    "streamlit>=1.44.0",
    "uvicorn[standard]>=0.34.0",
    "xgboost>=3.0.0",
]

[tool.uv.workspace]
members = ["app"]
