[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "motor>=3.7.0",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "uvicorn[standard]>=0.34.0",
    "xgboost>=3.0.0",
    "bcrypt>=4.3.0",
    "python-jose[cryptography]>=3.4.0",
    "pandas>=2.2.3",
]
